--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,11 @@ dependencies:
   dio: ^4.0.6
   lottie: ^1.3.0
   get: ^4.6.6
+  get_it: ^7.6.4
   flutter_screenutil: ^5.9.0
   flutter_svg: ^1.0.3
   flutter_staggered_animations: ^1.1.1
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
